welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:5: error: type mismatch;
 found   : Int
 required: Boolean
	else if (vacation==true && day!==0 || vacation==true && day!==6) {
                                   ^